fixed spacing

--- a/css/index.css
+++ b/css/index.css
@@ -1,121 +1,140 @@
-html,body{
+html,
+body {
   padding: 0;
   margin: 0;
 }
 
-*{
+* {
   padding: 0;
   margin: 0;
   font-weight: bold;
   text-transform: uppercase;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   font-size: 10pt;
   box-sizing: border-box;
   color: #063098;
   text-align: center;
 }
 
-h2,h3{
-  font-weight: normal;
-}
-
-#top{
+header,
+footer {
   height: 100vh;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  align-content: center;
 }
 
-figure:not(:first-of-type){
+header > *,
+footer > * {
+  width: 100%;
+}
+
+figure {
   position: relative;
 }
 
-figure:not(:first-of-type) figcaption{
-  height: 100vh;
+figure > :not(:first-child) {
+  margin: 100vh 0;
+}
+
+figure figcaption {
   position: sticky;
-  top: 45%;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%, -50%);
   z-index: -1;
   padding: 0 80px;
 }
 
-figure>img,
-figure>video{
+figure > img,
+figure > video {
   width: 100%;
-  margin: 50vh 0;
+  display: block;
 }
 
 /* media container */
 
-.social-container{
+.social-container {
   width: 100%;
   height: 100vh;
   background-color: lightgray;
   position: relative;
-  margin: 50vh 0;
 }
 
-.social-container .social-frame{
+.social-container .social-frame {
   width: 50vh;
   height: 90vh;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   border-radius: 10px;
   background: black;
 }
 
 .social-container .social-frame video,
-.social-container .social-frame img{
+.social-container .social-frame img {
   width: 90%;
   position: absolute;
   top: 20%;
   left: 50%;
-  transform: translate(-50%,-20%);
+  transform: translate(-50%, -20%);
 }
 
-.web-container{
+.web-container {
   width: auto;
   padding: 80px;
   background-color: lightgray;
-  margin: 50vh 0;
 }
 
 .web-container video,
-.web-container img{
+.web-container img {
   max-width: 100%;
   max-height: 100vh;
   border-radius: 10px;
-  margin-bottom: 20px;
 }
 
-.web-container a{
+.web-container a {
   display: block;
   width: fit-content;
   margin: auto;
+  margin-top: 20px;
 }
 
-figure:last-of-type > *:last-child{
+figure:last-of-type > *:last-child {
   margin-bottom: 0;
-}
-
-footer{
-  margin-top: auto;
-  text-align: center;
-  padding: 20px;
 }
 
 /*
 mobile view
 */
 @media only screen and (max-width: 480px) {
-  .web-container{
+  .web-container {
     padding: 40px;
   }
 
-  .social-container .social-frame{
-    width: 45vh;
+  .social-container {
     height: 80vh;
+  }
+
+  .social-container .social-frame {
+    width: 35vh;
+    height: 60vh;
+  }
+
+  figure > :not(:first-child) {
+    margin: 50vh 0;
+  }
+
+  figure figcaption {
+    padding: 0 40px;
+  }
+
+  .web-container video,
+  .web-container img {
+    border-radius: 5px;
   }
 }
 
@@ -123,4 +142,29 @@ mobile view
 tablet view
 */
 @media only screen and (min-width: 481px) and (max-width: 768px) {
+  .web-container {
+    padding: 40px;
+  }
+
+  .social-container {
+    height: 80vh;
+  }
+
+  .social-container .social-frame {
+    width: 35vh;
+    height: 60vh;
+  }
+
+  figure > :not(:first-child) {
+    margin: 50vh 0;
+  }
+
+  figure figcaption {
+    padding: 0 40px;
+  }
+
+  .web-container video,
+  .web-container img {
+    border-radius: 5px;
+  }
 }
